--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,96 +1,178 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Avenir, "Tiempos Headline", sans-serif;
-  margin: 0 auto;
-  font-size: 1.5 rem;
-}
-
-header {
-  font-size: 2rem;
-}
-
-p,
-dl,
-dt,
-dd,
-a {
-  font-size: 1.2rem;
-  text-decoration: none;
-}
-
-h2 {
-  font-size: 1.6rem;
-}
-
-h3 {
-  font-size: 1.4 rem;
-}
-
-nav {
-  margin: 10px;
-  padding: 10px;
-  justify-content: flex-end;
-  align-items: right;
-  text-decoration: none;
-  color: #c7c7c7;
+  height: 100vh;
+  align-items: center;
+  font-family: "Tiempos Headline", sans-serif;
 }
 
 .container {
   width: 100%;
-  height: auto;
-  padding: 20px;
-  margin: 20px;
-}
-
-div {
-  flex-wrap: wrap;
-  padding: 20px;
-  margin: 20px;
+  height: 0 auto;
+  padding: 50px;
+  margin: auto;
 }
 
 .row {
+  width: 100%;
+  height: auto;
   display: flex;
-  width: inherit;
   flex-wrap: wrap;
-  justify-content: space-between;
+  align-items: center;
+  text-align: left;
   padding: 20px;
-  margin: 20px;
+  margin: auto;
+}
+
+.inline {
+  display: inline;
+}
+
+.logo-container {
+  justify-content: flex-start;
+}
+
+nav {
+  display: inline;
+}
+
+a {
+  color: #9c9c9c;
+  padding: 0 30px;
+  margin-right: 10px;
+}
+
+.button {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 1.1rem;
+  padding: 15px 40px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  color: white;
+  background-color: #2f4361;
 }
 
 .column {
   flex: 1;
-  align-items: left;
+  justify-content: space-between;
 }
 
 img {
-  width: 150px;
+  display: inline;
+  width: 10vw;
   height: 0 auto;
 }
 
+.img-container {
+  object-fit: contain;
+  object-position: center;
+  width: 90vw;
+  height: 70vh;
+  padding: 20px;
+  margin: 20px;
+}
+
 .bg-img {
-  align-content: stretch;
-  justify-content: center;
-  background-image: url("images/hero.jpg");
+  align-content: left;
+  align-items: center;
+  padding-left: 20px;
   background-position: center;
   background-repeat: no-repeat;
+  object-fit: scale-down;
+  background-image: url("images/hero.jpg");
   background-size: 100%;
 }
 
-.duo {
-  width: 300px;
+h1 {
+  font-size: 2.5rem;
 }
 
-.button {
-  width: 120px;
-  height: auto;
-  padding: 15px;
-  border-radius: 10%;
-  color: white;
-  font-size: 1.1rem;
-  background-color: #2f4361;
+h2 {
+  font-size: 1.8rem;
+  line-height: 20px;
+  color: #6e6e6e;
+}
+
+footer,
+img,
+a,
+p,
+address,
+dl,
+dt,
+dd {
+  font-family: Avenir, sans-serif;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 25px;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.col-2 {
+  flex-basis: 50%;
+  align-content: left;
+  align-items: center;
+  padding: 20px 40px;
+  margin-left: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.col-3 {
+  flex-basis: calc(100% / 3);
+  align-content: left;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 80px;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.fs-1 {
+  font-size: 1rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .align-center {
   align-items: center;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.left {
+  justify-content: flex-start;
+}
+
+.right {
+  justify-content: flex-end;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.stretch {
+  justify-content: stretch;
+}
+
+.col-4 {
+  flex-basis: 25%;
 }
 
 .center {
@@ -99,6 +181,14 @@ img {
 
 .width-third {
   width: calc(100% /3);
+}
+
+dt {
+  text-transform: uppercase;
+}
+
+dd {
+  text-transform: none;
 }
 
 .white-text {
@@ -110,13 +200,32 @@ img {
 }
 
 .grey-text {
-  color: grey;
+  color: #9b9b9b;
 }
 
 .bg-grey {
-  background-color: grey;
+  background-color: #525351;
 }
 
 .bg-gray {
-  background-color: lightgray;
+  background-color: #fafafa;
+}
+
+.hidden-content {
+  display: none;
+}
+
+.hidden-visibility {
+  visibility: none;
+}
+
+.break {
+  break-after: column;
+}
+
+header,
+footer {
+  width: 100%;
+  height: auto;
+  padding: 20px;
 }
