--- a/dom-creation/styles.css
+++ b/dom-creation/styles.css
@@ -3,44 +3,71 @@
 }
 
 body {
-  margin: 0;
+  margin: 10px;
   font-family: sans-serif;
 }
 
 h2,
 h3 {
   font-weight: 400;
-  margin: 0.75rem 0;
 }
 
 p {
-  margin-bottom: 0.5rem;
+  padding: 20px;
 }
 
 .container {
-  max-width: 1000px;
-  margin: 1rem auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  margin: 10px;
 }
 
 .row {
-  display: flex;
-  flex-wrap: wrap;
+  width: 100%;
+  padding: 10px;
+  margin: 20px;
+}
+
+.image-container {
+  width: 50%;
+  object-fit: contain;
+  object-position: center;
+  justify-content: center;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+img {
+  width: 100px;
+  height: auto;
+  padding: 50px;
+  margin: 20px;
+  object-fit: contain;
+  object-position: center;
+  justify-content: center;
 }
 
 .column-third {
-  padding: 0 0.5rem;
-  width: calc(100% / 3);
+  flex-basis: calc(100% / 3);
+  object-fit: contain;
+  object-position: center;
+  justify-content: center;
 }
 
 .pokemon-card {
-  margin-bottom: 1rem;
+  width: 100%;
+  height: auto;
+  padding: 25px;
   border: 1px solid rgb(199 199 199);
-  border-radius: 0.25rem;
+  border-radius: 3px;
   box-shadow: 0 6px 6px -4px rgb(0 0 0 / 30%);
 }
 
 .pokemon-card-text {
-  padding: 1rem;
+  padding: 15px;
 }
 
 .pokemon-card h2 {
@@ -53,5 +80,14 @@ p {
 
 .pokemon-card > img {
   width: 100%;
+  padding: 0;
   background-color: rgb(210 210 210);
+}
+
+@media only screen and (max-width: 500px) {
+  /* For tablets: */
+  .main {
+    width: 50%;
+    padding: 0;
+  }
 }
